sap-s4hana-cloud/sap-s4hana-cloud/2.3/modules/ROOT/pages/sap-s4hana-cloud-connector-upgrade-migrate.adoc
= Upgrading and Migrating SAP S/4HANA OData Connector to 2.x 

Upgrade Anypoint Connector for SAP S/4HANA OData (SAP S/4HANA OData Connector) to take advantage of the increased security offered by using OAuth 2.0 authentication to connect to SAP S/4HANA OData.

== Supported Upgrade Paths

This is a direct upgrade from version 1.2.1 version to 2.x.x.

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.2.1 |2.x.x
|===

== What's Changed

=== 2.3

Added support to enable or disable the automatic retrieval of a CSRF token before a resource-modifying request, such as a POST request.

=== 2.2

You can now configure the response, client, and connection timeout parameters.

== 2.1

SAP S/4HANA OData Connector now provides support for the OData APIs exposed by SAP S/4HANA S/4HANA on-premise.

== 2.0

* OAuth 2.0 is now supported. +
The *OAuth 2.0 Application Connection Provider* option is added to *Connection* types. For information about the configuration parameters for this connection type, see xref:sap-s4hana-cloud-connector-reference.adoc[SAP S/4HANA OData Connector Reference].
* Mule runtime engine (Mule) 4.2.1 or later is required.
* The default value for the *Service directory* field was removed.
* Because the base package has changed, all exported classes now have different fully qualified names.
* The group ID of the connector’s JAR has changed.

== Requirements and Limitations

Be aware of the following requirements and limitations before you upgrade to the latest version.

=== Requirements

You must use Mule 4.2.1 or later.

=== Limitations

This upgrade breaks backward compatibility with 1.x.x versions of the connector.

== Upgrade Prerequisites

Before you upgrade, create a backup of your files, data, and configurations in case you need to restore to them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `sap s/4hana odata` in the search field.
. In *Available modules*, select *SAP S/4HANA OData Connector* and click *Add*.
. Click *Finish*.
. Verify that the `mule-sap-s4hana-cloud-connector` dependency version is updated to the version of the connector you are using in the `pom.xml` file in the Mule project.

Studio upgrades the connector automatically.

== Post Upgrade Steps

After you install the latest version of the connector, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of SAP S/4HANA OData Connector, change the `mule-sap-s4hana-cloud-connector` dependency version in the project’s `pom.xml` to the version to which you want to revert.

== See Also

https://help.salesforce.com[Salesforce Help]
